--- a/configuration.properties
+++ b/configuration.properties
@@ -1,15 +1,32 @@
-#properties dosyas?nda yorum yazmak için diyez konulur
-!-- POM'da temel test datalar?m?z? .properties uzant?l? dosyada saklar?z
-# Key = value ?eklinde test datalar?m?z? yazar?z. key'ler unique olur
+#properties dosyasinda yorum yazmak için diyez konulur
+!-- POM'da temel test datalarimizi .properties uzantili dosyada saklariz
+# Key = value seklinde test datalarimizi yazariz. key'ler unique olur
 
-#Amazon Datalar?
+# BROWSER
+browser = chrome
+
+# Google Test Datalari
+googleUrl = https://google.com
+
+# Amazon Datalari
 amazonUrl = https://amazon.com
 
-
-#TechProEd Datalar?
+# TechProEd Datalari
 techproedUrl = https://techproeducation.com
 
-#Open Source Demo Test Datalar?
+# Open Source Demo Test Datalari
 openSourceUrl = https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
 openSourceUserName = Admin
 openSourcePassword = admin123
+
+# Test Center Datalari
+testCenterUrl = https://testcenter.techproeducation.com/index.php?page=form-authentication
+testCenterUserName = techproed
+testCenterPassword = SuperSecretPassword
+
+# Blue Rental Cars Datalari
+blueRentalCarsUrl = https://www.bluerentalcars.com/
+blueRentalCarsEmail = ada@ada.com
+blueRentalCarsPassword = 12345
+fakeEmail = fake@bluerentalcars.com
+fakePassword = fakepass
