--- a/configuration.properties
+++ b/configuration.properties
@@ -30,3 +30,6 @@ blueRentalCarsEmail = ada@ada.com
 blueRentalCarsPassword = 12345
 fakeEmail = fake@bluerentalcars.com
 fakePassword = fakepass
+
+# DataProvider Test Data
+dataProviderUrl = https://dataprovider.netlify.app/
